# password-manager

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/auth/: constante.rs  mod.rs  model.rs  signin.rs  signup.rs  utils.rs
src/database/: accounts.db  passwords.db
